objects/SVMXC__Site__c.object
<CustomObject>
    <fields>
        <fullName>Accreditation__c</fullName>
        <label>Accreditation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Accreditation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultTerritory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location default territory.
If set, the territory matching rules will be overwritten and the location associated Work Orders will be linked to the Default Territory.</description>
        <label>Default Territory</label>
        <referenceTo>SVMXC__Territory__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>False_Alarms_Have_Occured__c</fullName>
        <formula>Number_Of_Alarms_In_The_Past_12_Month__c /  Index__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>False Alarms Have Occured</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Alarm_Monitored__c</fullName>
        <label>Fire Alarm Monitored</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Type__c</fullName>
        <description>Whether Installed Products are recorded as units or Buckets.</description>
        <inlineHelpText>Whether Installed Products are recorded as units or Buckets.</inlineHelpText>
        <label>IP Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buckets</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <formula>Number_Of_Detectors__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Index</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Italy_Navision_Ref_Number__c</fullName>
        <label>Italy Navision Ref Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <formula>SVMXC__Street__c +&quot; – &quot;+  SVMXC__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Alarms_In_The_Past_12_Month__c</fullName>
        <label>Number Of Alarms In The Past 12 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Detectors__c</fullName>
        <label>Number Of Detectors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Country__c</fullName>
        <description>“Country” part of the site’s address</description>
        <inlineHelpText>“Country” part of the site’s address</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>American Samoa</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua And Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas, The</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Is</label>
                </value>
                <value>
                    <fullName>BR</fullName>
                    <label>Brazil</label>
                </value>
                <value>
                    <fullName>IO</fullName>
                    <label>British Indian Ocean Territory</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UK_Navision_Ref_Num__c</fullName>
        <label>UK Navision Ref Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Chart_Present__c</fullName>
        <label>Zone Chart Present</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>SVMXC__Standard_Location</fullName>
        <active>true</active>
        <description>Standard Location</description>
        <label>Standard Location</label>
    </recordTypes>
</CustomObject>